[package]
name = "korvatunturi-rss"
version = "0.2.1"
edition = "2024"

[dependencies]
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive"] }
colored = "3.0.0"
config = "0.15.19"
env_logger = "0.11.8"
futures = "0.3.31"
hex = "0.4.3"
interprocess = { version = "2.2.3", features = ["tokio"] }
log = "0.4.29"
reqwest = { version = "0.12.25", features = ["json"] }
rss = { version = "2.0.12" }
serde = "1.0.228"
serde_json = "1.0.145"
sha2 = "0.10.9"
spinners = "4.1.1"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.48.0", features = ["full"] }
